- Miscellaneous code cleanup (#1165)
- Generated configuration files are now in var/... (#1014)
- pid files are now in var/run/
- Module versioning to improve handling of API changes in extension points
- Improvements to Captive Portal library utilities

Bug fixes
- fixed SNMPv3 sample configuration (Thanks to Nate Renbarger)
- Allows apache2 as a valid httpd daemon name (#1185, Thanks to Jesper)
- Fixed errors when editing a node with an unknown connection type (#1177)
- No more warnings in node lookup (#1173)
- Warning avoidance in pf::vlan's doWeActOnThisTrap (#832)
- pfcmd_vlan regressions (#1190)

--------------------------------------------------------------------------------
Version 2.0.1 released on 2011-01-26

New Hardware Support
- Xirrus WiFi Arrays support (feature sponsored by the University of Mary 
  Hardin-Baylor) 
- Broaden Meru Controllers support
- Extricom EXSW Wireless Switches (Controllers) support

Enhancements
- Minor improvement to command-line and Web Admin help
- Improvements to SSID lookups
- Cisco WiSM and WLC SSID now recorded (#994)

Bug fixes
- Fixed pfcmd initiated VLAN re-evaluation (#1160)
- pfdhcplistener is better at updating node IP information (#1149)
- Fixed dot11Deauthentication traps issues with pfsetvlan (#1157)
- Add missing variable in snort.conf template (#1138)
- Fixed authorized MAC method in Cisco Catalyst 2960 (#987)
- Improved error handling in pfdhcplistener (#1150)
- Fixed problems with configurator.pl generating erroneous configuration (#1148)
- installer.pl now warns on empty MySQL root password (#1146)
- Fixed node view database queries that were reporting wrong values under 
  unknown circumstances (#1162)
- Removed some unnecessary warnings (#1065)

--------------------------------------------------------------------------------
Version 2.0.0 released on 2010-12-14

New Hardware Support
- SMC TigerStack 6128 L2 support in Port Security (feature sponsored by Seattle
  Pacific University)